# blue_flame

./: .gitignore  Cargo.toml  LICENSE  Notes  README.md  delete_db.bat  objects  save
bak/: main.rs
copy_over/: Cargo  Cargo.toml  blue_flame.rs  main  main.rs
objects/: db  snap.0000000000002CA3  snap.000000000000E6DA  snap.000000000000E79B
project/: db  snap.0000000000000114  snap.000000000000045E  snap.00000000000005DE  snap.0000000000001F93  snap.000000000000235C  snap.0000000000003142  snap.0000000000004082  snap.00000000000062BC  snap.0000000000008A60  snap.000000000000976B  snap.0000000000009C28  snap.000000000001C6BB  snap.000000000001DC10  snap.000000000001F48E  snap.0000000000026809  snap.000000000003329C  snap.0000000000034805  snap.00000000000348E2  snap.000000000003E21C  snap.0000000000040BFE  snap.0000000000041A1A  snap.0000000000043F62  snap.0000000000045D73  snap.000000000004DABD  snap.000000000007313A  snap.00000000000D6A86
projects/: db  snap.0000000000001EE5  snap.0000000000013969  snap.0000000000014466
scenes/: db  snap.0000000000000294  snap.0000000000001B17  snap.0000000000001B86  snap.0000000000004DEB  snap.000000000000562D  snap.000000000000D6A8  snap.0000000000011980  snap.0000000000011A41  snap.0000000000011EB9  snap.000000000001B1F3  snap.000000000003D090  snap.000000000003F5DD  snap.000000000004D68C  snap.0000000000055BA1  snap.000000000005CB77  snap.000000000005E5B8  snap.000000000006A2E6
src/: blue_flame.code-workspace  db.rs  dumbass_notes.txt  main.rs  object_settings.rs  practice.rs  sql.rs
src/editor_modes/: main.rs  mod.rs  projects.rs
src/editor_modes/main/: main.rs  mod.rs
src/editor_modes/main/panels/: left.rs  menu_bar.rs  mod.rs  right.rs
src/editor_modes/main/panels/right/: box_collider.rs  d3_labeled_items.rs  linked_code.rs  main.rs  mod.rs  particle_system.rs  texture.rs
