[package]
name = "blue_flame"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# blue engine
# 0.4.27 original
blue_engine = "0.6.5"
blue_engine_utilities = {version = "0.6.5", features = ["egui"]}

# Prompts for file explorer
rfd = "0.13.0"

# Db shit
#postcard = "1.1.1"
postcard = {version = "1.1.1", features = ["use-std"]}
serde = "1.0.157"

# Dirs
dirs = "3.0"

# Common (my libraries)
blue_flame_common = {path = "./blue_flame_common/"}