[package]
name = "{project_name}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue_engine = {version = "0.4.27", default-features = false}

# Db shit
postcard = {verison = "1.0.4", features = ["use-std"]}
serde = "1.0.157"